fixed: copyright now 2026, footer legal notice link was missing text-align:right;

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -199,7 +199,18 @@ $footer-social-padding: rem(10) rem(25);
         @include flex($flex-direction: row, $justify-content: space-between, $align-items: center);
       }
       .footer-copyright { margin-left: auto; margin-top: 0; }
-      .footer-link { display: block; width: 100%; text-align: center; margin-top: rem(10); }
+      .footer-link {
+        display: block;
+        width: 100%;
+        text-align: right;
+        margin-top: 0;
+
+        a .legal-hover-img {
+          left: auto;
+          right: 0;
+          transform: none;
+        }
+      }
     }
     .footer-link-social {
       @include flex($justify-content: space-between);
